--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
@@ -77,6 +77,7 @@ services:
       - CEXPLORER_POOLS_URL=${CEXPLORER_POOLS_URL}
       - ALLOW_UNPARSABLE_BLOCK=${ALLOW_UNPARSABLE_BLOCK}
       - CARDANO_TRANSACTIONS_PROVER_CACHE_POOL_SIZE=${CARDANO_TRANSACTIONS_PROVER_CACHE_POOL_SIZE}
+      - CARDANO_TRANSACTIONS_DATABASE_CONNECTION_POOL_SIZE=${CARDANO_TRANSACTIONS_DATABASE_CONNECTION_POOL_SIZE}
     volumes:
       - ../data/${NETWORK}/mithril-aggregator/mithril:/mithril-aggregator/mithril
       - ../data/${NETWORK}/mithril-aggregator/cardano/db:/db
