--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -287,6 +287,7 @@ jobs:
         with:
           cache-version: ${{ secrets.CACHE_VERSION }}-wasm
           cargo-tools: wasm-pack
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish package to npm
         uses: ./.github/workflows/actions/publish-npm-package
