--- a/.github/workflows/test-deploy-network.yml
+++ b/.github/workflows/test-deploy-network.yml
@@ -16,7 +16,6 @@ on:
         options:
           - dev-preview
           - dev-mainnet
-          - testing-mainnet
       dry_run:
         description: Dry run will not deploy the distribution to the Mithril network
         required: true
@@ -28,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: [dev-preview, dev-mainnet, testing-mainnet]
+        environment: [dev-preview, dev-mainnet]
         include:
           - environment: dev-preview
             environment_prefix: dev
@@ -67,33 +66,6 @@ jobs:
             google_compute_instance_data_disk_type: pd-standard
           - environment: dev-mainnet
             environment_prefix: dev
-            cardano_network: mainnet
-            mithril_use_p2p_network: false
-            mithril_api_domain: api.mithril.network
-            mithril_era_reader_adapter_type: bootstrap
-            mithril_protocol_parameters: |
-              {
-                k     = 2422
-                m     = 20973
-                phi_f = 0.20
-              }
-            mithril_signers: |
-              {
-                "1" = {
-                  type    = "unverified-alone",
-                  pool_id = "pool1re8cmjt895tpx8dx2veg0cew5yqtxnt82sll03e433a4ugnh9w7",
-                }
-              }
-            terraform_backend_bucket: hydra-terraform-admin
-            google_region: europe-west1
-            google_zone: europe-west1-b
-            google_machine_type: e2-highmem-8
-            google_compute_instance_boot_disk_size: 250
-            google_compute_instance_boot_disk_type: pd-standard
-            google_compute_instance_data_disk_size: 1000
-            google_compute_instance_data_disk_type: pd-balanced
-          - environment: testing-mainnet
-            environment_prefix: testing
             cardano_network: mainnet
             mithril_use_p2p_network: false
             mithril_api_domain: api.mithril.network
