fix(ci): fix generation of swagger-ui page
Since #2062 the version of our openapi file is `3.1.1` but the action
that we use (`Legion2/swagger-ui-action@v1`) is configured by default to
use swaggerui version 3 or up and swagger ui is only compatible with
openapi 3.1 since version 5.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -874,6 +874,7 @@ jobs:
         with:
           output: out/
           spec-file: ./openapi.yaml
+          version: ^5.0.0
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish OpenAPI UI build
