--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -292,7 +292,7 @@ jobs:
         mode: ["std"]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
         next_era: [""]
-        cardano_node_version: ["9.1.1", "9.2.1", "10.1.2"]
+        cardano_node_version: ["9.1.1", "9.2.1", "10.1.2", "10.1.3"]
         hard_fork_latest_era_at_epoch: [0]
         run_id: ["#1", "#2"]
         extra_args: [""]
@@ -302,7 +302,7 @@ jobs:
           - mode: "p2p"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: [""]
-            cardano_node_version: "9.2.1"
+            cardano_node_version: "10.1.3"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--use-p2p-network"
@@ -310,7 +310,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "9.2.1"
+            cardano_node_version: "10.1.3"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: ""
@@ -318,7 +318,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "9.2.1"
+            cardano_node_version: "10.1.3"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--mithril-era-regenesis-on-switch"
