--- a/mithril-client-wasm/Cargo.toml
+++ b/mithril-client-wasm/Cargo.toml
@@ -13,14 +13,17 @@ categories = ["cryptography"]
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1.0.94"
 async-trait = "0.1.83"
+chrono = { version = "0.4.38", features = ["serde"] }
 futures = "0.3.31"
 mithril-client = { path = "../mithril-client", features = ["unstable"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
+serde_json = "1.0.132"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
-web-sys = { version = "0.3.76", features = ["BroadcastChannel"] }
+web-sys = { version = "0.3.76", features = ["BroadcastChannel", "Storage", "Window"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.49"
