--- a/mithril-client-wasm/Cargo.toml
+++ b/mithril-client-wasm/Cargo.toml
@@ -23,7 +23,7 @@ serde-wasm-bindgen = "0.6.5"
 serde_json = "1.0.132"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
-web-sys = { version = "0.3.76", features = ["BroadcastChannel", "Storage", "Window"] }
+web-sys = { version = "0.3.76", features = ["BroadcastChannel", "console", "Storage", "Window"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.49"
