fix(ci): properly package explorer with unstable and pre-release
The explorer was incorrectly included in the unstable release with all
its files uncompressed instead of being in one archive.
It also wasn't included when creating pre-releases.

--- a/.github/workflows/actions/prepare-distribution/action.yml
+++ b/.github/workflows/actions/prepare-distribution/action.yml
@@ -56,6 +56,15 @@ runs:
         --version "${{ inputs.version-name }}" \
         --target "windows-x64"
 
+    - name: Package Explorer
+      shell: bash
+      run: |
+        python3 ./.github/workflows/scripts/package-distribution.py \
+        --input package-explorer/ \
+        --dest package/ \
+        --name "mithril-explorer" \
+        --version "${{ inputs.version-name }}"
+
     - name: Prepare crates versions table
       shell: bash
       run: |
