ci: fix downloading of stable explorer when publishing to pages
The github secret token was missing in order to use `gh` cli.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -940,6 +940,8 @@ jobs:
 
       - name: Download and unpack Explorer build (stable)
         shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Note: If the tag is omitted, 'gh release' commands uses the latest released version
           LAST_DISTRIBUTION=$(gh release view -R ${{ github.repository }} --json "tagName" --jq ".tagName")
