--- a/.github/workflows/nightly-dispatcher.yml
+++ b/.github/workflows/nightly-dispatcher.yml
@@ -16,9 +16,12 @@ jobs:
   aggregator-stress-test:
     uses: ./.github/workflows/aggregator-stress-test.yml
 
+  test-client:
+    uses: ./.github/workflows/test-client.yml
+
   notify-on-failure:
     runs-on: ubuntu-22.04
-    needs: [docker-builds, aggregator-stress-test]
+    needs: [docker-builds, aggregator-stress-test, test-client]
     if: failure()
     steps:
       - name: Checkout repository
