fix: use `unstable` Docker image ID in `test-client` workflow instead of `latest` when triggered by the nightly dispatcher

--- a/.github/workflows/test-client.yml
+++ b/.github/workflows/test-client.yml
@@ -46,7 +46,7 @@ on:
         type: string
       docker_image_id:
         type: string
-        default: latest
+        default: unstable
       network:
         type: string
         default: preview
