fix: restore `release` option for build in Makefile for `aggregator` and `client_cli`

--- a/mithril-client-cli/Makefile
+++ b/mithril-client-cli/Makefile
@@ -10,7 +10,7 @@ CARGO = cargo
 all: test build
 
 build:
-	${CARGO} build
+	${CARGO} build --release
 	cp ../target/release/mithril-client .
 
 run: build
