--- a/mithril-aggregator/Makefile
+++ b/mithril-aggregator/Makefile
@@ -5,7 +5,7 @@ CARGO = cargo
 all: test build
 
 build:
-	${CARGO} build
+	${CARGO} build --release
 	cp ../target/release/mithril-aggregator .
 
 run: build
