--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -64,6 +64,7 @@ reqwest = { version = "0.12.12", default-features = false, features = [
     "json",
     "stream",
 ] }
+uuid = { version = "1.11.0", features = ["v4", "js"] }
 
 [dev-dependencies]
 httpmock = "0.7.0"
