--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -29,7 +29,14 @@ paste = "1.0.15"
 prometheus = "0.13.4"
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
-reqwest = { version = "0.12.12", features = ["json", "stream"] }
+reqwest = { version = "0.12.12", features = [
+    "json",
+    "stream",
+    "gzip",
+    "zstd",
+    "deflate",
+    "brotli"
+] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 slog = { version = "2.7.0", features = [
