--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -299,29 +299,7 @@ jobs:
         next_era: [""]
         cardano_node_version: ["10.1.3", "10.1.4"]
         hard_fork_latest_era_at_epoch: [0]
-        run_id:
-          [
-            "#1",
-            "#2",
-            "#3",
-            "#4",
-            "#5",
-            "#6",
-            "#7",
-            "#8",
-            "#9",
-            "#10",
-            "#11",
-            "#12",
-            "#13",
-            "#14",
-            "#15",
-            "#16",
-            "#17",
-            "#18",
-            "#19",
-            "#20",
-          ]
+        run_id: ["#1", "#2", "#3", "#4", "#5", "#6", "#7", "#8", "#9", "#10"]
         extra_args: [""]
 
         include:
