--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -255,7 +255,8 @@ jobs:
       max-parallel: 1
       matrix:
         package:
-          [mithril-stm, mithril-build-script, mithril-common, mithril-client]
+          [mithril-stm, mithril-build-script, mithril-common]
+          #[mithril-stm, mithril-build-script, mithril-common, mithril-client] Will be reactivated after release of the `2506` distribution.
 
     runs-on: ubuntu-24.04
     steps:
