--- a/mithril-explorer/Makefile
+++ b/mithril-explorer/Makefile
@@ -25,7 +25,7 @@ serve: build
 	@echo "\033[1mServing production build at: http://localhost:3001/explorer \033[0m"
 	python3 -m http.server --bind 127.0.0.1 3001
 
-dev: build
+dev:
 	@echo "=========================================================================="
 	@echo "\033[1mServing dev build at: http://localhost:3000/explorer \033[0m"
 	npm run dev
