chore(ci): reactivate publish test for `mithril-client`
It was deactivate because of an issue starting rust `1.84`,
(see aa55b34f57a71be972d73b7dee682ce39e96a206)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -486,8 +486,7 @@ jobs:
       max-parallel: 1
       matrix:
         package:
-          [mithril-stm, mithril-build-script, mithril-common]
-          #[mithril-stm, mithril-build-script, mithril-common, mithril-client] Will be reactivated after release of the `2506` distribution.
+          [mithril-stm, mithril-build-script, mithril-common, mithril-client]
 
     runs-on: ubuntu-24.04
     needs:
